@@ -16,7 +16,11 @@ static int check=0;
 //static const int bsa[] = {32, 64, 128, 256, 512, 1024, 2048, 4096, 8192};
 //static const int bsn = sizeof(bsa)/sizeof(int);
 static int *fsma, fsmn=-1;
+#ifdef _OPENMP
+static int bsmin=(512*1024*1024), bsmax=(512*1024*1024), *bsa, bsn;
+#else
 static int bsmin=32, bsmax=8192, *bsa, bsn;
+#endif
 static QOP_GaugeField *gauge;
 static double flops, secs;
 
