@@ -122,8 +122,14 @@
 #define QLATYPE_D QLA_DiracFermion
 #define QLATYPE_M QLA_ColorMatrix
 
-#define QOP_qdp_eq_raw(abbr, qdp, raw, evenodd) \
-  QDP_insert_##abbr(qdp, (QLATYPE_##abbr *)raw, QDP_all)
+#define QOP_qdp_eq_raw(abbr, qdp, raw, evenodd)			\
+  if(evenodd==QOP_EVEN) {					\
+    QDP_insert_##abbr(qdp, (QLATYPE_##abbr *)raw, QDP_even);	\
+  } else if(evenodd==QOP_ODD) {					\
+    QDP_insert_##abbr(qdp, (QLATYPE_##abbr *)raw, QDP_odd);	\
+  } else {							\
+    QDP_insert_##abbr(qdp, (QLATYPE_##abbr *)raw, QDP_all);	\
+  }
 
 #define QOP_raw_eq_qdp(abbr, raw, qdp, evenodd)		      \
   if(evenodd==QOP_EVEN) {				      \
