@@ -11,11 +11,17 @@ relnorm_func(NCPROT1 vector(*x), int i)
   QLA_Real xnrm2;
   r_eq_norm2_v(&xnrm2, x);
   if(xnrm2 == 0.) {
-    g_rel += 1.;
+#pragma omp critical
+    {
+      g_rel += 1.;
+    }
   } else {
     QLA_Real rnrm2;
     r_eq_norm2_v(&rnrm2, &r[i]);
-    g_rel += rnrm2/xnrm2;
+#pragma omp critical
+    {
+      g_rel += rnrm2/xnrm2;
+    }
   }
 }
 
@@ -25,7 +31,7 @@ QOPPCV(relnorm2)(Vector2 **rsd, Vector2 **out, QDP_Subset subset, int nv)
   g_rel = 0;
   for(int i=0; i<nv; i++) {
     g_r = expose_V(rsd[i]);
-    V_eq_funci(out[i], relnorm_func, subset);
+    V_eq_funcit(out[i], relnorm_func, subset);
     reset_V(rsd[i]);
   }
   QMP_sum_double(&g_rel);
