@@ -1,3 +1,6 @@
+2015-03-21:	James Osborn
+	Added OpenMP threading to parts not covered by QLA.
+
 ===========================================================================
 2014-09-08      version 0.20.0
 ===========================================================================
